finalization of the site, correction of small defects

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         </script>
     </head>
     <body>
+        <div class="preloader">
+            <div class="spinner"></div>
+        </div>
         <header class="header">
             <div class="container">
                 <nav>
@@ -352,40 +355,40 @@
                     <div class="glide__track" data-glide-el="track">
                         <ul class="glide__slides">
                             <li class="glide__slide">
-                                <img src="./img/for_slide/slide1.png" alt="отзыв" />
+                                <img src="./img/for_slide/slide1.webp" alt="отзыв" />
                             </li>
                             <li class="glide__slide">
-                                <img src="./img/for_slide/slide2.png" alt="отзыв" />
+                                <img src="./img/for_slide/slide2.webp" alt="отзыв" />
                             </li>
                             <li class="glide__slide">
-                                <img src="./img/for_slide/slide3.png" alt="отзыв" />
+                                <img src="./img/for_slide/slide3.webp" alt="отзыв" />
                             </li>
                             <li class="glide__slide">
-                                <img src="./img/for_slide/slide4.png" alt="отзыв" />
+                                <img src="./img/for_slide/slide4.webp" alt="отзыв" />
                             </li>
                             <li class="glide__slide">
-                                <img src="./img/for_slide/slide5.png" alt="отзыв" />
+                                <img src="./img/for_slide/slide5.webp" alt="отзыв" />
                             </li>
                             <li class="glide__slide">
-                                <img src="./img/for_slide/slide6.png" alt="отзыв" />
+                                <img src="./img/for_slide/slide6.webp" alt="отзыв" />
                             </li>
                             <li class="glide__slide">
-                                <img src="./img/for_slide/slide7.png" alt="отзыв" />
+                                <img src="./img/for_slide/slide7.webp" alt="отзыв" />
                             </li>
                             <li class="glide__slide">
-                                <img src="./img/for_slide/slide8.png" alt="отзыв" />
+                                <img src="./img/for_slide/slide8.webp" alt="отзыв" />
                             </li>
                             <li class="glide__slide">
-                                <img src="./img/for_slide/slide9.png" alt="отзыв" />
+                                <img src="./img/for_slide/slide9.webp" alt="отзыв" />
                             </li>
                             <li class="glide__slide">
-                                <img src="./img/for_slide/slide10.png" alt="отзыв" />
+                                <img src="./img/for_slide/slide10.webp" alt="отзыв" />
                             </li>
                             <li class="glide__slide">
-                                <img src="./img/for_slide/slide11.png" alt="отзыв" />
+                                <img src="./img/for_slide/slide11.webp" alt="отзыв" />
                             </li>
                             <li class="glide__slide">
-                                <img src="./img/for_slide/slide12.png" alt="отзыв" />
+                                <img src="./img/for_slide/slide12.webp" alt="отзыв" />
                             </li>
                         </ul>
                     </div>
@@ -397,11 +400,11 @@
                     БОЛЕЕ <span>100</span> ДОВОЛЬНЫХ УЧЕНИКОВ <span>ПО ВСЕМУ МИРУ</span>
                 </h2>
                 <div class="section4-countries">
-                    <img src="./img/countries/kg.png" alt="флаг Кыргызстана" />
-                    <img src="./img/countries/kz.png" alt="флаг Казахстана" />
-                    <img src="./img/countries/br.png" alt="флаг Беларуссии" />
-                    <img src="./img/countries/us.png" alt="флаг Америки" />
-                    <img src="./img/countries/ru.png" alt="флаг России" />
+                    <img src="./img/countries/kg.webp" alt="флаг Кыргызстана" />
+                    <img src="./img/countries/kz.webp" alt="флаг Казахстана" />
+                    <img src="./img/countries/br.webp" alt="флаг Беларуссии" />
+                    <img src="./img/countries/us.webp" alt="флаг Америки" />
+                    <img src="./img/countries/ru.webp" alt="флаг России" />
                 </div>
                 <p class="section4-text">
                     Занятия доступны как <span>онлайн</span> так и <span>офлайн по НСК</span>, а на
