--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </h2>
                 <div class="section2-scratch">
                     <div class="section2-age">
-                        <span>c 8 лет</span>
+                        <span>c 7 лет</span>
                         <h3>Scratch</h3>
                     </div>
                     <p class="section2-text section2-text1">
@@ -316,7 +316,7 @@
                                 На этом этапе вы перейдёте от базовых навыков к более серьёзным
                                 инструментам разработки. Мы научимся управлять зависимостями с
                                 помощью виртуальных окружений, разберём работу с файлами в том числе
-                                и с exel, замыкания и декораторы, а также освоим асинхронное
+                                и с excel, замыкания и декораторы, а также освоим асинхронное
                                 программирование. Вы научитесь взаимодействовать с внешними
                                 сервисами через API, создавать простых Telegram-ботов и
                                 разрабатывать десктоп-приложения. Практические задания будут
@@ -407,9 +407,9 @@
                     <img src="./img/countries/ru.webp" alt="флаг России" />
                 </div>
                 <p class="section4-text">
-                    Занятия доступны как <span>онлайн</span> так и <span>офлайн по НСК</span>, а на
-                    первое занятие <span>вы получите скидку 50%</span> от изначальной цены - 8$ в
-                    час.
+                    Занятия доступны как <span>онлайн</span> так и
+                    <span>офлайн в новосибирске</span>, а на первое занятие
+                    <span>вы получите скидку 50%</span> от изначальной цены - 8$ в час.
                 </p>
             </section>
 
