--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 
                             <label for="phoneNumber">Номер телефона</label>
                             <div class="phone-input">
-                                <select id="countryCode">
+                                <select id="countryCode" name="countryCode">
                                     <option value="RU" data-mask="(999) 999-99-99">
                                         Россия (+7)
                                     </option>
