--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                 </div>
                 <p class="section4-text">
                     Занятия доступны как <span>онлайн</span> так и
-                    <span>офлайн в новосибирске</span>, а на первое занятие
+                    <span>офлайн в Новосибирске</span>, а на первое занятие
                     <span>вы получите скидку 50%</span> от изначальной цены - 8$ в час.
                 </p>
             </section>
