--- a/index.html
+++ b/index.html
@@ -420,7 +420,10 @@
                     </h2>
                     <div class="section5-step section5-step1">
                         <span class="section5-step-number">1</span>
-                        <h3>Напишите мне в <span>Telegram</span> или в <span>WhatsApp</span></h3>
+                        <h3>
+                            Напишите мне в <span>Telegram</span>, на <span>почту</span> или в
+                            <span>WhatsApp</span>
+                        </h3>
                     </div>
 
                     <p class="section5-step-text">
@@ -428,6 +431,7 @@
                         выберу удобное время для наших занятий.
                     </p>
                     <div class="phone-number">
+                        <a href="mailto:danilabezhin@gmail.com">danilabezhin@gmail.com</a>
                         <a href="tel:+79956892613">+7 (995) 689-26-13</a>
                         <a href="tel:+79955702188">+7 (995) 570-21-88</a>
                     </div>
@@ -447,7 +451,7 @@
                                 name="name"
                                 minlength="2"
                                 maxlength="14"
-                                pattern="[А-Яа-яЁёA-Za-z]+"
+                                pattern="[А-Яа-яЁёA-Za-z\s]+"
                                 title="Используйте только буквы кириллицы или латиницы."
                                 required
                             />
@@ -537,6 +541,12 @@
                     <a href="tel:+79955702188">+7 (995) 570-21-88</a>
                     <a href="mailto:danilabezhin@gmail.com">danilabezhin@gmail.com</a>
                 </div>
+            </div>
+            <div class="footer-copyright container">
+                <p>
+                    © Green School 2019-2024 Все права защищены. Перепечатка и цитирование
+                    материалов запрещены.
+                </p>
             </div>
         </footer>
 
