--- a/index.html
+++ b/index.html
@@ -4,10 +4,41 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Green School</title>
+
+        <!-- Иконка сайта -->
+        <link rel="icon" href="./img/logo.svg" type="image/svg+xml" />
+
+        <!-- SEO оптимизация -->
+        <meta
+            name="description"
+            content="Green School - Индивидуальное обучение программированию. Максимум внимания и результата!"
+        />
+        <meta
+            name="keywords"
+            content="Green School, программирование, индивидуальное обучение, обучение"
+        />
+        <meta name="author" content="Green School, Бежин Данила Владимирович" />
+        <meta name="robots" content="index, follow" />
+
+        <!-- Социальные медиа (Open Graph) -->
+        <meta
+            property="og:title"
+            content="Green School - Индивидуальное обучение программированию. Максимум внимания и результата!"
+        />
+        <meta
+            property="og:description"
+            content="Записывайся на занятие и получай скидку 50% на первое занятие!"
+        />
+        <meta property="og:image" content="./img/logo.svg" />
+        <meta property="og:url" content="https://danilabezhin.github.io/green_school/" />
+        <meta property="og:type" content="website" />
+
+        <!-- Подключение стилей -->
         <link rel="stylesheet" href="./style/reset.css" />
         <link rel="stylesheet" href="./style/var.css" />
         <link rel="stylesheet" href="./style/style.css" />
         <link rel="stylesheet" href="./style/glide.core.min.css" />
+
         <!-- отправка формы -->
         <script
             type="text/javascript"
