--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                     <div class="phone-number">
                         <a href="mailto:danilabezhin@gmail.com">danilabezhin@gmail.com</a>
                         <a href="tel:+79956892613">+7 (995) 689-26-13</a>
-                        <a href="tel:+79955702188">+7 (995) 570-21-88</a>
+                        <!-- <a href="tel:+79955702188">+7 (995) 570-21-88</a> -->
                     </div>
                     <div class="section5-step section5-step2">
                         <span class="section5-step-number">2</span>
